--- a/src/experience/index.html
+++ b/src/experience/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./about.jsx"></script>
+  <script type="module" src="./experience.jsx"></script>
 </body>
 
 </html>
