--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React</title>
+  <title>Contact</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./experience.jsx"></script>
+  <script type="module" src="./contact.jsx"></script>
 </body>
 
 </html>
