--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/portfoli0/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact</title>
   <script type="module" crossorigin src="/portfoli0/assets/about-e2f55a17.js"></script>
